--- a/public/screen.css
+++ b/public/screen.css
@@ -10,40 +10,77 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  background-color: black;
 }
 
 header {
   background-image: url(/images/space.png);
+  background-repeat: no-repeat;
   display: flex;
   justify-content: column;
+  padding: 5rem;
+}
+
+header img {
+  border: 0.5rem solid transparent;
+  border-radius: 5%;
+}
+
+header section {
+  background-color: white;
+  opacity: 0.75;
+  width: 30rem;
+  height: 4rem;
+  border: 0.5rem solid transparent;
+  border-radius: 5%;
 }
 
 .projects {
   display: flex;
   justify-content: column;
-  background-color: black;
-  margin: 0;
-  padding: 2rem;
+  /* use media queries to control wrapping behavior */
+  flex: wrap;
+  margin: 0.75rem;
+}
+
+.projects img {
+  padding: 0 0.5rem 0 0.5rem;
 }
 
 .blog {
-  background-color: black;
   margin: 0;
 }
 
-.blog-post article {
+.blog article {
+  margin: 0.5rem;
+  border: 0.5rem solid transparent;
+  border-radius: 5%;
+}
+
+/* .blog-post-1 {
+  background-image: url(/images/react.png);
+}
+
+.blog-post-2 {
+  background-image: url(/images/code.png);
+} */
+
+section article article {
   background-color: white;
-  margin: 2rem;
+  margin: 0;
 }
 
 section a p {
   background-color: blue;
+  margin: 0;
+  border: 0.25rem solid transparent;
+  border-radius: 5%;
 }
 
 footer {
   display: flex;
-  justify-content: center;
-  background-color: black;
+  flex-direction: column;
+  align-items: center;
   color: white;
   margin: 0;
 }
