--- a/public/screen.css
+++ b/public/screen.css
@@ -16,17 +16,25 @@ body {
 header {
   background-image: url(/images/space.png);
   background-repeat: no-repeat;
+  background-size: 100% 100%;
   display: flex;
-  justify-content: column;
+  flex-direction: column;
   padding: 5rem;
+  margin: 0;
+  height: 20rem;
 }
 
-header img {
+.salutation {
+  display: flex;
+  flex-direction: row;
+}
+
+.salutation img {
   border: 0.5rem solid transparent;
   border-radius: 5%;
 }
 
-header section {
+.word-bubble {
   background-color: white;
   opacity: 0.75;
   width: 30rem;
@@ -71,10 +79,12 @@ section article article {
 }
 
 section a p {
-  background-color: blue;
+  background-color: rgb(0 126 206);
   margin: 0;
   border: 0.25rem solid transparent;
   border-radius: 5%;
+  width: 6.25rem;
+  color: white;
 }
 
 footer {
