--- a/public/screen.css
+++ b/public/screen.css
@@ -10,7 +10,7 @@ html {
 body {
   margin: 0;
   min-height: 100%;
-  background-color: black;
+  background-color: rgb(3 16 25);
 }
 
 header {
@@ -19,14 +19,13 @@ header {
   background-size: 100% 100%;
   display: flex;
   flex-direction: column;
-  padding: 5rem;
   margin: 0;
-  height: 20rem;
 }
 
 .salutation {
   display: flex;
   flex-direction: row;
+  margin: 5rem;
 }
 
 .salutation img {
@@ -49,6 +48,8 @@ header {
   /* use media queries to control wrapping behavior */
   flex: wrap;
   margin: 0.75rem;
+  position: bottom;
+  background-color: rgba(3 16 25 1);
 }
 
 .projects img {
@@ -59,32 +60,35 @@ header {
   margin: 0;
 }
 
-.blog article {
-  margin: 0.5rem;
-  border: 0.5rem solid transparent;
-  border-radius: 5%;
+.blog-head {
+  height: 3rem;
 }
 
-/* .blog-post-1 {
-  background-image: url(/images/react.png);
-}
-
-.blog-post-2 {
+section article {
   background-image: url(/images/code.png);
-} */
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
 
-section article article {
+#blog-post-1 {
+  background-image: url(/images/react.png);
+  background-position-y: 68%;
+}
+
+.blog article div {
   background-color: white;
   margin: 0;
 }
 
 section a p {
+  /* keep reading button */
   background-color: rgb(0 126 206);
   margin: 0;
-  border: 0.25rem solid transparent;
-  border-radius: 5%;
   width: 6.25rem;
   color: white;
+  margin-top: -1.5rem;
+  position: relative;
+  left: 500px;
 }
 
 footer {
