--- a/public/screen.css
+++ b/public/screen.css
@@ -58,20 +58,30 @@ header {
 
 .blog {
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.blog article {
+  background-image: url(/images/code.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  border: 0.5rem solid transparent;
+  border-radius: 10%;
 }
 
 .blog-head {
   height: 3rem;
 }
 
-section article {
-  background-image: url(/images/code.png);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-}
-
 #blog-post-1 {
   background-image: url(/images/react.png);
+  /* position translation not working */
   background-position-y: 68%;
 }
 
@@ -86,9 +96,9 @@ section a p {
   margin: 0;
   width: 6.25rem;
   color: white;
-  margin-top: -1.5rem;
-  position: relative;
-  left: 500px;
+  margin-top: -1rem;
+  border: 0.5rem solid transparent;
+  border-radius: 5%;
 }
 
 footer {
