--- a/public/screen.css
+++ b/public/screen.css
@@ -40,6 +40,9 @@ header {
   height: 4rem;
   border: 0.5rem solid transparent;
   border-radius: 5%;
+  display: flex;
+  flex: wrap;
+  flex-direction: column;
 }
 
 .projects {
@@ -49,6 +52,7 @@ header {
   flex: wrap;
   margin: 0.75rem;
   position: bottom;
+  /* second background not working */
   background-color: rgba(3 16 25 1);
 }
 
@@ -67,12 +71,12 @@ header {
   background-image: url(/images/code.png);
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  width: 100%;
+  width: 95%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   border: 0.5rem solid transparent;
-  border-radius: 10%;
+  border-radius: 12%;
 }
 
 .blog-head {
@@ -96,7 +100,8 @@ section a p {
   margin: 0;
   width: 6.25rem;
   color: white;
-  margin-top: -1rem;
+  margin-top: -1.5rem;
+  margin-right: 1.5rem;
   border: 0.5rem solid transparent;
   border-radius: 5%;
 }
