--- a/public/screen.css
+++ b/public/screen.css
@@ -8,8 +8,8 @@ html {
 }
 
 body {
-  margin: 0;
   min-height: 100%;
+  margin: 0;
   background-color: rgb(3 16 25);
 }
 
@@ -66,12 +66,11 @@ h4 {
 }
 
 .triangle {
-  opacity: 1;
   position: relative;
   position: bottom;
 }
 
-.projects {
+ul {
   display: flex;
   flex: wrap;
   justify-content: column;
@@ -82,9 +81,11 @@ h4 {
   position: bottom;
   /* second background not working */
   background-color: rgba(3 16 25 1);
+  z-index: 2;
+  list-style: none;
 }
 
-.projects img {
+ul img {
   padding: 0 0.5rem 0 0.5rem;
 }
 
@@ -114,6 +115,7 @@ h4 {
 #blog-post-1 {
   background-image: url(/images/react.png);
   /* position translation not working */
+  background-position-y: 60%;
 }
 
 .blog article div {
@@ -121,22 +123,24 @@ h4 {
   margin: 0;
 }
 
-h1 {
-  font-weight: bold;
-  font-size: 1.5rem;
-}
-
-h2 {
-  font-size: 1rem;
-  padding-left: 0.5rem;
-}
-
 .blog article div header {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin: 0;
-  padding-left: 1rem;
+  padding: 1rem 0 0 1rem;
+}
+
+h1 {
+  font-weight: bold;
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+h2 {
+  font-size: 1rem;
+  padding-left: 0.5rem;
+  margin: 0;
 }
 
 .blog article div p {
