--- a/public/screen.css
+++ b/public/screen.css
@@ -26,37 +26,39 @@ body {
   display: flex;
   flex-direction: row;
   margin: 5rem;
+  align-items: flex-end;
 }
 
 .personal img {
-  border: 0.5rem solid transparent;
+  border-top: 0.5rem solid transparent;
   border-radius: 5%;
+  height: 13rem;
+  width: 13rem;
+  transform: rotate(0.75turn);
 }
 
 .word-bubble {
   background-color: white;
   opacity: 0.75;
-  width: 25rem;
-  height: 4rem;
+  width: 12.4rem;
+  height: 3rem;
   border: 0.5rem solid transparent;
   border-radius: 5%;
   display: flex;
-  flex: wrap;
   flex-direction: column;
-  margin: 0 0 0 1rem;
+  margin: 0;
   justify-content: center;
-  justify-content: space-evenly;
+  position: absolute;
 }
 
 h3 {
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   opacity: 0.75;
   margin: 0;
 }
 
 h4 {
-  opacity: 0.75;
-  margin: 0;
+  display: none;
 }
 
 .personal div {
@@ -66,8 +68,7 @@ h4 {
 }
 
 .triangle {
-  position: relative;
-  position: bottom;
+  display: none;
 }
 
 ul {
@@ -76,9 +77,7 @@ ul {
   justify-content: column;
   width: 100%;
   justify-content: center;
-  /* use media queries to control wrapping behavior */
   margin: 0.75rem;
-  position: bottom;
   /* second background not working */
   background-color: rgba(3 16 25 1);
   z-index: 3;
@@ -86,6 +85,7 @@ ul {
 }
 
 ul img {
+  height: 5rem;
   padding: 0 0.5rem 0 0.5rem;
 }
 
@@ -96,7 +96,6 @@ ul img {
 }
 
 .blog article {
-  background-image: url(/images/code.png);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   width: 95%;
@@ -106,14 +105,15 @@ ul img {
   border-radius: 10%;
 }
 
-.blog-head {
+#blog-head-1 {
   height: 3rem;
+  background-image: url(/images/react.png);
+  background-position-y: 50%;
 }
 
-#blog-post-1 {
-  background-image: url(/images/react.png);
-  /* position translation not working */
-  background-position-y: 60%;
+#blog-head-2 {
+  height: 3rem;
+  background-image: url(/images/code.png);
 }
 
 .blog article div {
@@ -142,8 +142,7 @@ h2 {
 }
 
 .blog article div p {
-  margin: 1rem;
-  padding: 0;
+  display: none;
 }
 
 section a p {
@@ -168,4 +167,38 @@ footer {
 
 h6 {
   font-size: 0.5rem;
+}
+
+@media (min-width: 700px) {
+  .personal {
+    align-items: initial;
+  }
+
+  .word-bubble {
+    position: initial;
+    width: 25rem;
+    margin: 0 0 0 1rem;
+    height: 4rem;
+  }
+
+  ul img {
+    height: 10rem;
+  }
+
+  h4 {
+    display: initial;
+    opacity: 0.75;
+    margin: 0;
+  }
+
+  .triangle {
+    position: relative;
+    position: bottom;
+  }
+
+  .blog article div p {
+    display: initial;
+    margin: 1rem;
+    padding: 0;
+  }
 }
