--- a/public/screen.css
+++ b/public/screen.css
@@ -76,21 +76,22 @@ h4 {
   width: 100%;
   margin-left: -2rem;
   justify-content: space-around;
-  /* second background not working */
-  background-color: rgba(3 16 25 1);
+  padding-top: 1rem;
+  background-color: rgba(3, 16, 25, 0.75);
+  background-size: 100% 100%;
   list-style: none;
 }
 
 .projects img {
   height: 5rem;
   padding: 0.5rem;
-  flex-grow: 1;
 }
 
 .blog {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  margin-left: -1rem;
 }
 
 .blog article {
